<resources>
    <string name="app_name">Proximate</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_nearby">Nearby</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="empty_field_error_message">Please make sure none of the fields are empty!</string>
    <string name="error_title">Oops!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="action_logout">Logout</string>
    <string name="empty_list_message">No Users Nearby!\nInvite your Friends!</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">Invalid Latitude Longitude used</string>
    <string name="no_address_found">No address found at given location</string>
    <string name="address_found">address found!</string>
    <string name="no_geocoder_available">No location available</string>
    <string name="password_confirm_hint">Confirm Password</string>
    <string name="password_doesnt_match_message">The passwords do not match!</string>
    <string name="latitude_title">Latitude :</string>
    <string name="longitude_title">Longitude :</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="app_moto">proximity based messaging</string>
    <string name="username_title">Username :</string>
    <string name="welcome_label">Welcome,</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_message">Message</string>
    <string name="label_send">Send</string>
    <string name="message_hint">type your message</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_inbox_message">No messages in inbox\nStart a new conversation!</string>
    <string name="title_inbox">Inbox</string>
    <string name="send_at_label">Sent at</string>
    <string name="nearby_loading_text">Finding Users Nearby</string>
</resources>
