<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.tatparya.proximate.LoginActivity" android:paddingTop="10dp" android:paddingBottom="10dp"
        >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:elevation="5dp"
                android:paddingBottom="20dp"
                android:orientation="vertical">
                <ImageView android:padding="40dp"
                           android:layout_weight="0.8"
                           android:layout_width="fill_parent"
                           android:layout_height="wrap_content"
                           android:id="@+id/imageView2"
                           android:src="@mipmap/ic_launcher"
                           android:layout_gravity="center"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/app_name"
                          android:textAppearance="?android:attr/textAppearanceLarge"
                          android:layout_gravity="center"
                          android:layout_weight="0.1"
                        />
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/app_moto"
                          android:textAppearance="?android:attr/textAppearanceMedium"
                          android:layout_gravity="center"
                          android:layout_weight="0.1"
                        />
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.5"
                android:orientation="vertical">
                <EditText
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username_hint"
                        android:id="@+id/usernameField"
                        android:longClickable="true"
                        android:padding="15dp"
                        />
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/passwordField"
                        android:padding="15dp"/>
                <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_button_label"
                        android:id="@+id/loginButton"
                        android:padding="20dp"
                        />
                <TextView
                        android:layout_weight="0.5"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/sign_up_text"
                        android:id="@+id/signUpText"
                        android:layout_gravity="center"/>

        </LinearLayout>

</LinearLayout>
