<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_message"
            android:id="@+id/textView" android:layout_gravity="center_horizontal"
            android:textAllCaps="true"
            android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <Button
            style="?android:attr/buttonStyleSmall"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_send"
            android:id="@+id/sendButton" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/messageEditText"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/sendButton"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/message_hint"
            />
    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chat_listView" android:layout_centerHorizontal="true" android:layout_below="@+id/textView"
            android:layout_above="@+id/messageEditText"
            android:transcriptMode="alwaysScroll"
            android:stackFromBottom="true"/>
    <TextView
            android:padding="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/app_name"
            android:id="@+id/recepient_name_text"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

</RelativeLayout>