<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_profile"
            android:id="@+id/textView" android:layout_gravity="center_horizontal"
            android:textAllCaps="true"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <LinearLayout
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/latitude_layout"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true" >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/latitude_title"
                    android:id="@+id/latitude_title"/>
            <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/hello_world"
                    android:id="@+id/latitude_text"/>
            </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:padding="10dp"
            android:id="@+id/longitude_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/latitude_layout"
            android:layout_alignParentLeft="true" >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/longitude_title"
                    android:id="@+id/longitude_title"/>
            <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/hello_world"
                    android:id="@+id/longitude_text"/>
    </LinearLayout>

</RelativeLayout>